--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,8 +1,15 @@
-.app{
+.app {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
-h3{
+
+h3 {
   margin: auto;
+  color: rgb(82, 82, 82);
+  font-weight: 800;
+}
+
+button {
+  margin-left:20px;
 }
